fix the slideshow on firefox

--- a/slideshow.sass
+++ b/slideshow.sass
@@ -9,13 +9,14 @@
     height: 100vh
 
 .swiper-slide
-    display: flex
-    flex-direction: column
+    display: grid
+    height: 100vh
+    grid-template-rows: 1fr auto
 
 .picture
-    object-fit: scale-down
-    height: 0
-    flex: 1
+    width: 100%
+    height: 100%
+    object-fit: contain
 
 .picture-label
     text-align: center
